tests/type_only_vars/type_only_vars.exp
Error ---------------------------------------------------------------------------------------------- import_type.js:11:9

Cannot use type `A` [1] as a value. Types are erased and don't exist at runtime. If the exported binding can also be
used as a value, try importing it using `import A` instead of `import type A` and `import {A}` instead of
`import type {A}`. [type-as-value]

   import_type.js:11:9
   11| var m = A;
               ^

References:
   import_type.js:5:15
    5| import typeof A from './A.js';
                     ^ [1]


Error ---------------------------------------------------------------------------------------------- import_type.js:12:9

Cannot use type `Foo` [1] as a value. Types are erased and don't exist at runtime. If the exported binding can also be
used as a value, try importing it using `import Foo` instead of `import type Foo` and `import {Foo}` instead of
`import type {Foo}`. [type-as-value]

   import_type.js:12:9
   12| var n = Foo;
               ^^^

References:
   import_type.js:6:14
    6| import type {Foo, Bar as Baz} from './A.js';
                    ^^^ [1]


Error ---------------------------------------------------------------------------------------------- import_type.js:13:9

Cannot use type `Baz` [1] as a value. Types are erased and don't exist at runtime. If the exported binding can also be
used as a value, try importing it using `import Baz` instead of `import type Baz` and `import {Baz}` instead of
`import type {Baz}`. [type-as-value]

   import_type.js:13:9
   13| var o = Baz;
               ^^^

References:
   import_type.js:6:26
    6| import type {Foo, Bar as Baz} from './A.js';
                                ^^^ [1]


Error ------------------------------------------------------------------------------------------------ type_alias.js:8:9

Cannot use type `Foo` [1] as a value. Types are erased and don't exist at runtime. [type-as-value]

   type_alias.js:8:9
   8| var x = Foo;
              ^^^

References:
   type_alias.js:5:6
   5| type Foo = number;
           ^^^ [1]



Found 4 errors
